<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tingkerbell</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtHint">tyle todo</string>
    <string name="add">+</string>
    <string name="up">√</string>
    
    
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="timeSet">Time Set</string>
    <string name="list">list</string>
    <string name="voice">voice</string>
    <string name="setting">setting</string>
    <string name="title_activity_update">UpdateActivity</string>
    
    <string name="todayTV">TODAY</string>
    <string name="tomorrowTV">TOMORROW</string>
    <string name="weekTV">in WEEK</string>
    <string name="monthTV">in MONTH</string>

</resources>
