<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:background="#ffffff"
	 android:orientation="vertical"
	 android:layout_width="fill_parent"
	 android:layout_height="fill_parent">
    <LinearLayout
	     android:id="@+id/upLayoutUp"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	     >
		 <EditText
			 android:id="@+id/EditTitleUp"
			 android:layout_weight="1"
			 android:layout_width="0dp"
		     android:layout_height="wrap_content"
		  	 ></EditText>
		<Button
		    android:id="@+id/btnAddUp"
		    android:layout_width="45dp"
		    android:layout_height="wrap_content"
		    android:text="@string/add" >
		</Button>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	    >
		 <EditText
				 android:id="@+id/EditTextUp"
				 android:layout_weight="1"
				 android:layout_width="0dp"
			     android:layout_height="200dp"
			     android:hint="@string/txtHint"
			  	 ></EditText>
    </LinearLayout>
    
	<LinearLayout 
		android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal" >
	    <Button
	         android:id="@+id/btnAddTodaUp"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:text="@string/today" >
	     </Button>

	     <Button
	         android:id="@+id/btnAddTomoUp"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:text="@string/tomorrow" >
	     </Button>

	     <Button
	         android:id="@+id/btnTimeSetUp"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:text="@string/timeSet" >
    	</Button>
	</LinearLayout>
</LinearLayout>
